Fixed the bugs and tested everything.